--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card-gradient {
+    border-radius: 38px;
+    background: radial-gradient(114.31% 111.01% at -6.68% 59.11%, 
+    rgba(250, 250, 250, 0.20) 0%, rgba(246, 246, 246, 0.00) 100%);
+}
+
